samples/_failures_safe/1761247060_cae278_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40c0d584.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_40c0d584.c:151: error: expected ‘{’ at end of input
